RESOLVED FIXED72144
[WK2][X11] Don't leak the colormap we created for the plugin
https://bugs.webkit.org/show_bug.cgi?id=72144
Summary [WK2][X11] Don't leak the colormap we created for the plugin
Balazs Kelemen
Reported 2011-11-11 09:49:38 PST
Just a small issue I noticed, we should free the colormap.
Attachments
Patch (1.71 KB, patch)
2011-11-11 09:53 PST, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2011-11-11 09:53:29 PST
Xan Lopez
Comment 2 2011-11-16 09:46:31 PST
Comment on attachment 114720 [details] Patch This looks good to me.
Balazs Kelemen
Comment 3 2011-11-16 10:05:38 PST
Comment on attachment 114720 [details] Patch Clearing flags on attachment: 114720 Committed r100464: <http://trac.webkit.org/changeset/100464>
Balazs Kelemen
Comment 4 2011-11-16 10:05:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.