[WK2][X11] Don't leak the colormap we created for the plugin https://bugs.webkit.org/show_bug.cgi?id=72144

Reviewed by Xan Lopez.

* WebProcess/Plugins/Netscape/x11/NetscapePluginX11.cpp:
(WebKit::NetscapePlugin::platformDestroy):

Canonical link: https://commits.webkit.org/88995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100464 268f45cc-cd09-0410-ab3c-d52691b4dbfc